commit for intital HTML layout completion

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="/style/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>My Name</h1>
+        <nav>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contacts</a>
+            <a href="">Projects</a>
+        </nav>
+    </header>
+    <setion class="main">
+        <div class="imageContainer">
+            <div class="image">
+                <img src="" alt="My main picture">
+            </div>
+        </div>
+        <div class="introContainer">
+            <div class="intro">
+                <h2>My name</h2>
+            </div>
+        </div>
+        <div class="gallery">
+            <img src="" alt="thing1" class="galleryItem">
+            <img src="" alt="thing2" class="galleryItem">
+            <img src="" alt="thing3" class="galleryItem">
+            <img src="" alt="thing4" class="galleryItem">
+            <img src="" alt="thing5" class="galleryItem">
+            <img src="" alt="thing6" class="galleryItem">
+            <img src="" alt="thing7" class="galleryItem">
+            <img src="" alt="thing8" class="galleryItem">
+        </div>
+    </setion>
+    <footer>
+        <h2>Like what you see?</h2>
+        <a href="">Contact me</a>
+    </footer>
 </body>
 </html>
