commit for intital HTML and css layout completion with links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <h1>My Name</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Contacts</a>
-            <a href="">Projects</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contacts</a>
+            <a href="projects.html">Projects</a>
         </nav>
     </header>
     <setion class="main">
@@ -26,7 +26,7 @@
         <div class="introContainer">
                 <h2>My name</h2>
                 <div>
-                    <a href="">My Projects</a>
+                    <a href="projects.html">My Projects</a>
                 </div>
                 <p>This is where those inspiring words were supposed to go. I wonder where they went.</p>
         </div>
@@ -69,7 +69,7 @@
     </setion>
     <footer>
         <h2>Like what you see?</h2>
-        <a href="">Contact me</a>
+        <a href="contact.html">Contact me</a>
     </footer>
 </body>
 </html>
