responsive design for 500px added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 </div>
                 <p>This is where those inspiring words were supposed to go. I wonder where they went.</p>
         </div>
-     
+        </section>
+        <section class="gallery">
             <div class="galleryItem">
                 <img src="assets/view1.png" alt="thing1">
                 <h3>Thing 1</h3>
@@ -65,8 +66,7 @@
                 <img src="assets/view1.png" alt="thing4">
                 <h3>Thing 4</h3>
             </div>
-
-    </setion>
+        </section>    
     <footer>
         <h2>Like what you see?</h2>
         <a href="contact.html">Contact me</a>
